deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $CI_PROJECT_NAME
  labels:
    name: $CI_PROJECT_NAME
spec:
  # type: LoadBalancer
  ports:
    - port: 443
      targetPort: 8080
      protocol: TCP
      name: https
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    name: $CI_PROJECT_NAME
