deploy/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $CI_PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - path: /$CI_PROJECT_NAME(/|$)(.*)
        backend:
          serviceName: $CI_PROJECT_NAME
          servicePort: 8080
